force-app/main/default/objects/Lead/fields/Address_foreign_lang__c.field-meta.xml
<CustomField>
    <fullName>Address_foreign_lang__c</fullName>
    <label>Address in foreign language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>