force-app/main/default/objects/Lead/fields/Affidato_a_Profilo_Commerciale__c.field-meta.xml
<CustomField>
    <fullName>Affidato_a_Profilo_Commerciale__c</fullName>
    <label>Affidato a Profilo Commerciale</label>
    <type>Date</type>
</CustomField>