force-app/main/default/objects/Lead/fields/Affidato_al_dealer_il__c.field-meta.xml
<CustomField>
    <fullName>Affidato_al_dealer_il__c</fullName>
    <label>Affidato al dealer il</label>
    <type>Date</type>
</CustomField>