force-app/main/default/objects/Lead/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rely Measure</fullName>
            </value>
            <value>
                <fullName>Ningbo Dahong</fullName>
            </value>
            <value>
                <fullName>Zunliang</fullName>
            </value>
            <value>
                <fullName>Ryoka</fullName>
            </value>
            <value>
                <fullName>Beijing Brainy</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>Vtech</fullName>
            </value>
            <value>
                <fullName>Kingho</fullName>
            </value>
            <value>
                <fullName>Suzhou Insize</fullName>
            </value>
            <value>
                <fullName>Leeport</fullName>
            </value>
            <value>
                <fullName>Direct VVC</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>