force-app/main/default/objects/Lead/fields/Agency_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agency_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Agency)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>