force-app/main/default/objects/Lead/fields/Categoria_Geocom__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Geocom__c</fullName>
    <label>Categoria Geocom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>