force-app/main/default/objects/Lead/fields/Category_foreign_lang__c.field-meta.xml
<CustomField>
    <fullName>Category_foreign_lang__c</fullName>
    <label>Category in foreign language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>