force-app/main/default/objects/Lead/fields/Collected_by__c.field-meta.xml
<CustomField>
    <fullName>Collected_by__c</fullName>
    <description>Data collected by</description>
    <label>Collected by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>