force-app/main/default/objects/Lead/fields/Competitor_dealer_detail__c.field-meta.xml
<CustomField>
    <fullName>Competitor_dealer_detail__c</fullName>
    <label>Competitor/dealer detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition Hommel</fullName>
            </value>
            <value>
                <fullName>Competition Sylvac</fullName>
            </value>
            <value>
                <fullName>Competition Marposs</fullName>
            </value>
            <value>
                <fullName>Competition Dr. Schneider</fullName>
            </value>
            <value>
                <fullName>Competition Mahr</fullName>
            </value>
            <value>
                <fullName>Competition Keyence</fullName>
            </value>
            <value>
                <fullName>Competition Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Competition FOX</fullName>
            </value>
            <value>
                <fullName>Competition Chotest</fullName>
            </value>
            <value>
                <fullName>Competition Micro-vu</fullName>
            </value>
            <value>
                <fullName>Competition OGP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>