force-app/main/default/objects/Lead/fields/Contact_Name_foreign_lan__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_foreign_lan__c</fullName>
    <label>Contact Name in foreign language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>