force-app/main/default/objects/Lead/fields/Data_last_status_update__c.field-meta.xml
<CustomField>
    <fullName>Data_last_status_update__c</fullName>
    <label>Data last status update</label>
    <type>Date</type>
</CustomField>