force-app/main/default/objects/Lead/fields/Data_stato_contacted_to_be_converted__c.field-meta.xml
<CustomField>
    <fullName>Data_stato_contacted_to_be_converted__c</fullName>
    <label>Data stato - contacted / to be converted</label>
    <type>Date</type>
</CustomField>