force-app/main/default/objects/Lead/fields/Data_stato_not_ready__c.field-meta.xml
<CustomField>
    <fullName>Data_stato_not_ready__c</fullName>
    <label>Data stato - not ready</label>
    <type>Date</type>
</CustomField>