force-app/main/default/objects/Lead/fields/Data_stato_out_of_target__c.field-meta.xml
<CustomField>
    <fullName>Data_stato_out_of_target__c</fullName>
    <label>Data stato - out of target</label>
    <type>Date</type>
</CustomField>