force-app/main/default/objects/Lead/fields/Descrizione_Geocom__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_Geocom__c</fullName>
    <label>Description 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>