force-app/main/default/objects/Lead/fields/Durata_Chiusura_Lead__c.field-meta.xml
<CustomField>
    <fullName>Durata_Chiusura_Lead__c</fullName>
    <formula>IF( !ISNULL( Data_stato_out_of_target__c ) , ( Data_stato_out_of_target__c - DATEVALUE(CreatedDate)),  IF(!ISNULL( Data_stato_contacted_to_be_converted__c  ), ( Data_stato_contacted_to_be_converted__c - DATEVALUE(CreatedDate)), null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata Chiusura Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>