force-app/main/default/objects/Lead/fields/Durata_Conversione__c.field-meta.xml
<CustomField>
    <fullName>Durata_Conversione__c</fullName>
    <formula>ConvertedDate -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata Conversione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>