force-app/main/default/objects/Lead/fields/Durata_lead_chiuso_negativo__c.field-meta.xml
<CustomField>
    <fullName>Durata_lead_chiuso_negativo__c</fullName>
    <formula>( Data_stato_out_of_target__c  - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata lead - chiuso negativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>