force-app/main/default/objects/Lead/fields/Durata_lead_da_convertire_positivo__c.field-meta.xml
<CustomField>
    <fullName>Durata_lead_da_convertire_positivo__c</fullName>
    <formula>( Data_stato_contacted_to_be_converted__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata lead da convertire - positivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>