force-app/main/default/objects/Lead/fields/Durata_passaggio_a_commerciale__c.field-meta.xml
<CustomField>
    <fullName>Durata_passaggio_a_commerciale__c</fullName>
    <formula>(Affidato_a_Profilo_Commerciale__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata passaggio a commerciale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>