force-app/main/default/objects/Lead/fields/Durata_passaggio_a_dealer__c.field-meta.xml
<CustomField>
    <fullName>Durata_passaggio_a_dealer__c</fullName>
    <formula>(Affidato_al_dealer_il__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durata passaggio a dealer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>