force-app/main/default/objects/Lead/fields/Feedback_agenti_post_geocom__c.field-meta.xml
<CustomField>
    <fullName>Feedback_agenti_post_geocom__c</fullName>
    <label>Feedback agenti post-geocom</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>