force-app/main/default/objects/Lead/fields/Feedback_Contact__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Contact__c</fullName>
    <label>Feedback Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>