force-app/main/default/objects/Lead/fields/Imported_From_SnapAddy__c.field-meta.xml
<CustomField>
    <fullName>Imported_From_SnapAddy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported From SnapAddy</label>
    <type>Checkbox</type>
</CustomField>