force-app/main/default/objects/Lead/fields/Iscritto_alla_newsletter__c.field-meta.xml
<CustomField>
    <fullName>Iscritto_alla_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iscritto alla newsletter</label>
    <type>Checkbox</type>
</CustomField>