force-app/main/default/objects/Lead/fields/isPortal__c.field-meta.xml
<CustomField>
    <fullName>isPortal__c</fullName>
    <formula>IF(IsConverted, false, IF( NOW()-60 &gt;= LastModifiedDate, false, true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPortal</label>
    <type>Checkbox</type>
</CustomField>