force-app/main/default/objects/Lead/fields/isReadOnly__c.field-meta.xml
<CustomField>
    <fullName>isReadOnly__c</fullName>
    <formula>IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isReadOnly</label>
    <type>Checkbox</type>
</CustomField>