force-app/main/default/objects/Lead/fields/isSendEmailGDPR__c.field-meta.xml
<CustomField>
    <fullName>isSendEmailGDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSendEmailGDPR</label>
    <type>Checkbox</type>
</CustomField>