force-app/main/default/objects/Lead/fields/Last_touch_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_touch_Campaign__c</fullName>
    <label>Last touch Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>