force-app/main/default/objects/Lead/fields/Lingua__c.field-meta.xml
<CustomField>
    <fullName>Lingua__c</fullName>
    <label>Lingua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>