force-app/main/default/objects/Lead/fields/Lingua_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Lingua_GDPR__c</fullName>
    <formula>IF( Country==&apos;Italy&apos; ,&apos;it_IT&apos;, 
 IF(Country==&apos;Germany&apos;, &apos;de_DE&apos;, &apos;en_EN&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lingua GDPR</label>
    <type>Text</type>
</CustomField>