force-app/main/default/objects/Lead/fields/Machine_feature_detail__c.field-meta.xml
<CustomField>
    <fullName>Machine_feature_detail__c</fullName>
    <label>Machine feature detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>