force-app/main/default/objects/Lead/fields/Machine_user_FOV__c.field-meta.xml
<CustomField>
    <fullName>Machine_user_FOV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machine user FOV</label>
    <type>Checkbox</type>
</CustomField>