force-app/main/default/objects/Lead/fields/MN_ImportErrors__c.field-meta.xml
<CustomField>
    <fullName>MN_ImportErrors__c</fullName>
    <description>Flag for &quot;Import failed&quot;</description>
    <inlineHelpText>Flag for &quot;Import failed&quot;</inlineHelpText>
    <label>MN_ImportErrors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>