force-app/main/default/objects/Lead/fields/MN_ImportFailed__c.field-meta.xml
<CustomField>
    <fullName>MN_ImportFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for &quot;Import failed&quot;</description>
    <inlineHelpText>Flag for &quot;Import failed&quot;</inlineHelpText>
    <label>MN_ImportFailed</label>
    <type>Checkbox</type>
</CustomField>