force-app/main/default/objects/Lead/fields/Name_in_foreign_language__c.field-meta.xml
<CustomField>
    <fullName>Name_in_foreign_language__c</fullName>
    <label>Company name in foreign language</label>
    <length>90</length>
    <type>Text</type>
</CustomField>