force-app/main/default/objects/Lead/fields/NO_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>NO_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO Newsletter</label>
    <type>Checkbox</type>
</CustomField>