force-app/main/default/objects/Lead/fields/notConverted__c.field-meta.xml
<CustomField>
    <fullName>notConverted__c</fullName>
    <formula>IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>notConverted</label>
    <type>Checkbox</type>
</CustomField>