force-app/main/default/objects/Lead/fields/Out_of_target_detail__c.field-meta.xml
<CustomField>
    <fullName>Out_of_target_detail__c</fullName>
    <label>Out of target detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor/dealer</fullName>
            </value>
            <value>
                <fullName>Machine features</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>