force-app/main/default/objects/Lead/fields/Potentially_intrested_in__c.field-meta.xml
<CustomField>
    <fullName>Potentially_intrested_in__c</fullName>
    <inlineHelpText>Use this field to take note of potential machines suitable for the customer, even he is actually not intrested in purchasing
Usa il campo per annotare quale macchina potenzialmente farebbe al caso loro, anche se al momento non interessato</inlineHelpText>
    <label>Potentially intrested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M304</fullName>
            </value>
            <value>
                <fullName>M306</fullName>
            </value>
            <value>
                <fullName>M309</fullName>
            </value>
            <value>
                <fullName>M314</fullName>
            </value>
            <value>
                <fullName>M318</fullName>
            </value>
            <value>
                <fullName>M604</fullName>
            </value>
            <value>
                <fullName>M606</fullName>
            </value>
            <value>
                <fullName>M609</fullName>
            </value>
            <value>
                <fullName>M614</fullName>
            </value>
            <value>
                <fullName>M618</fullName>
            </value>
            <value>
                <fullName>M906</fullName>
            </value>
            <value>
                <fullName>M909</fullName>
            </value>
            <value>
                <fullName>M914</fullName>
            </value>
            <value>
                <fullName>M918</fullName>
            </value>
            <value>
                <fullName>M1209</fullName>
            </value>
            <value>
                <fullName>M1214</fullName>
            </value>
            <value>
                <fullName>M1218</fullName>
            </value>
            <value>
                <fullName>MTL 1</fullName>
            </value>
            <value>
                <fullName>MTL X5</fullName>
            </value>
            <value>
                <fullName>MTL X10</fullName>
            </value>
            <value>
                <fullName>X360</fullName>
                <label>MTL X360</label>
            </value>
            <value>
                <fullName>MTL 300 Evo</fullName>
            </value>
            <value>
                <fullName>MTL 500 Evo (60)</fullName>
            </value>
            <value>
                <fullName>MTL 500 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 850 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 1250 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 500 Evo (120)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>