force-app/main/default/objects/Lead/fields/Purchase_planned_by_year_end__c.field-meta.xml
<CustomField>
    <fullName>Purchase_planned_by_year_end__c</fullName>
    <label>Purchase planned by year-end</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>