force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Write here when  you do not find the role in the pickslist</description>
    <label>Role (text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>