force-app/main/default/objects/Lead/fields/Ruolo_picklist__c.field-meta.xml
<CustomField>
    <fullName>Ruolo_picklist__c</fullName>
    <label>Role (picklist)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Titolare</fullName>
            </value>
            <value>
                <fullName>Resp. produzione</fullName>
            </value>
            <value>
                <fullName>Resp. sala metrologica</fullName>
            </value>
            <value>
                <fullName>Uff.acquisti</fullName>
            </value>
            <value>
                <fullName>Tecnico sala metrologica</fullName>
            </value>
            <value>
                <fullName>Operatore macchina</fullName>
            </value>
            <value>
                <fullName>Resp.commerciale</fullName>
            </value>
            <value>
                <fullName>Venditore</fullName>
            </value>
            <value>
                <fullName>Application guy/Sales engineer</fullName>
            </value>
            <value>
                <fullName>Logistica</fullName>
            </value>
            <value>
                <fullName>Accounting (amministrazione)</fullName>
            </value>
            <value>
                <fullName>Responsabile di</fullName>
            </value>
            <value>
                <fullName>Group Leader</fullName>
            </value>
            <value>
                <fullName>Membro</fullName>
            </value>
            <value>
                <fullName>Adetto alla programmazione macchina</fullName>
            </value>
            <value>
                <fullName>Utilizzatore macchina</fullName>
            </value>
            <value>
                <fullName>Planner</fullName>
            </value>
            <value>
                <fullName>Master/foreman</fullName>
            </value>
            <value>
                <fullName>Studente</fullName>
            </value>
            <value>
                <fullName>Stagista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>