force-app/main/default/objects/Lead/fields/State_province__c.field-meta.xml
<CustomField>
    <fullName>State_province__c</fullName>
    <description>Write here State/province if not included in the picklist</description>
    <inlineHelpText>Write here State province if not included in the picklist</inlineHelpText>
    <label>State/province custom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>