force-app/main/default/objects/Lead/fields/Status_geocom__c.field-meta.xml
<CustomField>
    <fullName>Status_geocom__c</fullName>
    <label>Status geocom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>