force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not reachable</fullName>
            </value>
            <value>
                <fullName>Out of target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>