force-app/main/default/objects/Lead/validationRules/Competitor_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Detail_Required</fullName>
    <active>false</active>
    <description>Requires Competitor/dealer Detail when Out of Target Detail is Competitor/dealer.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Unqualified&quot;),
  ISPICKVAL(Unqualified_Reason__c, &quot;Out of target&quot;),
  ISPICKVAL(Out_of_target_detail__c, &quot;Competitor/dealer&quot;),
  ISBLANK(TEXT(Competitor_dealer_detail__c))
)</errorConditionFormula>
    <errorDisplayField>Competitor_dealer_detail__c</errorDisplayField>
    <errorMessage>Please specify the Competitor/dealer detail.</errorMessage>
</ValidationRule>