force-app/main/default/objects/Lead/validationRules/Machine_Feature_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Machine_Feature_Detail_Required</fullName>
    <active>false</active>
    <description>Requires Machine Feature Detail when Out of Target Detail is Machine features.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Unqualified&quot;),
  ISPICKVAL(Unqualified_Reason__c, &quot;Out of target&quot;),
  ISPICKVAL(Out_of_target_detail__c, &quot;Machine features&quot;),
  ISBLANK(Machine_feature_detail__c)
)</errorConditionFormula>
    <errorDisplayField>Machine_feature_detail__c</errorDisplayField>
    <errorMessage>Please specify the machine feature detail.</errorMessage>
</ValidationRule>