force-app/main/default/objects/Lead/validationRules/Mandatory_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_country</fullName>
    <active>true</active>
    <description>Set Country as mandatory</description>
    <errorConditionFormula>ISBLANK(Country) &amp;&amp; Company!=&apos;Salesforce&apos; /* a causa di un test  nella classe salesforce unsubscribe dei portali */</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country is a mandatory field</errorMessage>
</ValidationRule>