force-app/main/default/objects/Lead/validationRules/Out_of_Target_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_of_Target_Detail_Required</fullName>
    <active>false</active>
    <description>Requires Out of Target Detail when Unqualified Reason is Out of target.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Unqualified&quot;),
  ISPICKVAL(Unqualified_Reason__c, &quot;Out of target&quot;),
  TEXT(Out_of_target_detail__c) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Out_of_target_detail__c</errorDisplayField>
    <errorMessage>Please specify the out of target detail.</errorMessage>
</ValidationRule>