force-app/main/default/objects/Lead/validationRules/Unqualified_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason_Required</fullName>
    <active>true</active>
    <description>Requires Unqualified Reason when Lead Status is set to Unqualified.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Unqualified&quot;),
  TEXT(Unqualified_Reason__c) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>Please specify the reason for unqualification.</errorMessage>
</ValidationRule>